WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188453
REGRESSION(234640) Loading stalls in environments without SafariSafeBrowsing framework
https://bugs.webkit.org/show_bug.cgi?id=188453
Summary
REGRESSION(234640) Loading stalls in environments without SafariSafeBrowsing ...
Alex Christensen
Reported
2018-08-09 15:32:02 PDT
REGRESSION(234640) Loading stalls in environments without SafariSafeBrowsing framework
Attachments
Patch
(4.43 KB, patch)
2018-08-09 15:33 PDT
,
Alex Christensen
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-08-09 15:33:26 PDT
Created
attachment 346866
[details]
Patch
Alex Christensen
Comment 2
2018-08-09 15:33:28 PDT
<
rdar://problem/43102553
>
Chris Dumez
Comment 3
2018-08-09 15:36:21 PDT
Comment on
attachment 346866
[details]
Patch r=me
Alex Christensen
Comment 4
2018-08-09 15:38:07 PDT
http://trac.webkit.org/r234739
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug