REGRESSION(234640) Loading stalls in environments without SafariSafeBrowsing framework https://bugs.webkit.org/show_bug.cgi?id=188453 <rdar://problem/43102553>

Source/WebKit:

Reviewed by Chris Dumez.

* UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::beginSafeBrowsingCheck):

Tools:

Reviewed by Chris Dumez

* TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm:
(TEST):
(+[NullLookupContext sharedLookupContext]):
(TestWebKitAPI::TEST): Deleted.



Canonical link: https://commits.webkit.org/203550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234739 268f45cc-cd09-0410-ab3c-d52691b4dbfc